更新分析脚本，修正执行计数并添加数据框输出以汇总模型性能指标

--- a/analysis/LELAB_new.ipynb
+++ b/analysis/LELAB_new.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dict for title/res path pair \n",
     "# running on LELAB new \n",
+    "# wait for ws3 to be ready\n",
     "\n",
     "pegasus = {\n",
     "\t\"add\":\n",
