--- a/analysis/pegasus.ipynb
+++ b/analysis/pegasus.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,7 @@
     "import seaborn as sns\n",
     "import torch \n",
     "from pathlib import Path\n",
+    "import pandas as pd\n",
     "\n",
     "from torchmetrics.classification import (\n",
     "MulticlassAccuracy,\n",
@@ -241,6 +242,8 @@
     "\n",
     "def analysis_with_title_res_path_pair(pair: dict, flag: str = \"with_attn_loss\"):\n",
     "\n",
+    "\tsummary_records = []\n",
+    "\t\n",
     "\tfor title, res_path in pair.items():\n",
     "\t\t\n",
     "\t\tfold = 0\n",
@@ -264,8 +267,13 @@
     "\t\t\n",
     "\t\tprint('*' * 100)\n",
     "\t\tprint(title)\n",
-    "\t\tconfusion_matrix_data = metrics(all_pred, all_label, num_class=3)\n",
+    "\t\tconfusion_matrix_data, metric_dict = metrics(all_pred, all_label, num_class=3)\n",
     "\t\tprint('#' * 100)\n",
+    "\n",
+    "\t\t# save summary records\n",
+    "\t\tsummary_row = {\"Model\": title, \"Fold\": fold}\n",
+    "\t\tsummary_row.update(metric_dict)\n",
+    "\t\tsummary_records.append(summary_row)\n",
     "\n",
     "\t\tplt.rcParams.update({'font.size': 30, 'font.family': 'sans-serif'})\n",
     "\t\taxis_labels = ['ASD', 'DHS', 'LCS_HipOA']\n",
@@ -279,25 +287,42 @@
     "\t\tplt.xlabel('Predicted Label', fontsize=30)\n",
     "\t\tplt.show()\n",
     "    \t\n",
+    "\tdf_summary = pd.DataFrame(summary_records)\n",
+    "\tprint(\"Summary of Metrics:\")\n",
+    "\tprint(df_summary.to_csv(sep=\"\\t\", index=False))\n",
     "\n",
     "def metrics(all_pred: torch.Tensor, all_label: torch.Tensor, num_class: int = 3):\n",
+    "    # define metrics\n",
+    "    _accuracy = MulticlassAccuracy(num_class)\n",
+    "    _precision = MulticlassPrecision(num_class)\n",
+    "    _recall = MulticlassRecall(num_class)\n",
+    "    _f1_score = MulticlassF1Score(num_class)\n",
+    "    _auroc = MulticlassAUROC(num_class)\n",
+    "    _confusion_matrix = MulticlassConfusionMatrix(num_class, normalize=\"true\")\n",
     "\n",
-    "\t# define metrics \n",
-    "\t_accuracy = MulticlassAccuracy(num_class)\n",
-    "\t_precision = MulticlassPrecision(num_class)\n",
-    "\t_recall = MulticlassRecall(num_class)\n",
-    "\t_f1_score = MulticlassF1Score(num_class)\n",
-    "\t_auroc = MulticlassAUROC(num_class)\n",
-    "\t_confusion_matrix = MulticlassConfusionMatrix(num_class, normalize=\"true\")\n",
+    "    accuracy = _accuracy(all_pred, all_label).item()\n",
+    "    precision = _precision(all_pred, all_label).item()\n",
+    "    recall = _recall(all_pred, all_label).item()\n",
+    "    f1 = _f1_score(all_pred, all_label).item()\n",
+    "    auroc = _auroc(all_pred, all_label).item()\n",
+    "    cm = _confusion_matrix(all_pred, all_label).cpu().numpy() * 100\n",
     "\n",
-    "\tprint('accuracy: %s' % _accuracy(all_pred, all_label))\n",
-    "\tprint('precision: %s' % _precision(all_pred, all_label))\n",
-    "\tprint('recall: %s' % _recall(all_pred, all_label))\n",
-    "\tprint('f1_score: %s' % _f1_score(all_pred, all_label))\n",
-    "\tprint('aurroc: %s' % _auroc(all_pred, all_label))\n",
-    "\tprint('_confusion_matrix: %s' % _confusion_matrix(all_pred, all_label))\n",
+    "    print(f\"accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"precision: {precision:.4f}\")\n",
+    "    print(f\"recall: {recall:.4f}\")\n",
+    "    print(f\"f1_score: {f1:.4f}\")\n",
+    "    print(f\"auroc: {auroc:.4f}\")\n",
+    "    print(f\"confusion_matrix:\\n{cm}\")\n",
     "\n",
-    "\treturn _confusion_matrix(all_pred, all_label).cpu().numpy() * 100\n",
+    "    metrics_dict = {\n",
+    "        \"accuracy\": accuracy,\n",
+    "        \"precision\": precision,\n",
+    "        \"recall\": recall,\n",
+    "        \"f1_score\": f1,\n",
+    "        \"auroc\": auroc,\n",
+    "    }\n",
+    "\n",
+    "    return cm, metrics_dict\n",
     "\n",
     "analysis_with_title_res_path_pair(pegasus, flag=\"pegasus\")"
    ]
