--- a/analysis/ws3.ipynb
+++ b/analysis/ws3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,14 +50,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "add\n",
-      "accuracy: tensor(0.7232)\n",
-      "precision: tensor(0.7650)\n",
-      "recall: tensor(0.7232)\n",
-      "f1_score: tensor(0.7227)\n",
-      "aurroc: tensor(0.8965)\n",
-      "_confusion_matrix: tensor([[0.7741, 0.0631, 0.1628],\n",
-      "        [0.4028, 0.4764, 0.1207],\n",
-      "        [0.0722, 0.0088, 0.9190]])\n",
+      "accuracy: 0.7232\n",
+      "precision: 0.7650\n",
+      "recall: 0.7232\n",
+      "f1_score: 0.7227\n",
+      "auroc: 0.8965\n",
+      "confusion_matrix:\n",
+      "[[77.41161    6.313131  16.275253 ]\n",
+      " [40.282784  47.64347   12.073746 ]\n",
+      " [ 7.2247376  0.8766015 91.89866  ]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -80,14 +81,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "mul\n",
-      "accuracy: tensor(0.5814)\n",
-      "precision: tensor(0.6751)\n",
-      "recall: tensor(0.5814)\n",
-      "f1_score: tensor(0.5748)\n",
-      "aurroc: tensor(0.7895)\n",
-      "_confusion_matrix: tensor([[0.7066, 0.0225, 0.2710],\n",
-      "        [0.3836, 0.3065, 0.3100],\n",
-      "        [0.2583, 0.0106, 0.7311]])\n",
+      "accuracy: 0.5814\n",
+      "precision: 0.6751\n",
+      "recall: 0.5814\n",
+      "f1_score: 0.5748\n",
+      "auroc: 0.7895\n",
+      "confusion_matrix:\n",
+      "[[70.65657    2.2474747 27.095959 ]\n",
+      " [38.355972  30.648739  30.995285 ]\n",
+      " [25.826029   1.0596281 73.11434  ]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -110,14 +112,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "concat\n",
-      "accuracy: tensor(0.7201)\n",
-      "precision: tensor(0.7367)\n",
-      "recall: tensor(0.7201)\n",
-      "f1_score: tensor(0.7121)\n",
-      "aurroc: tensor(0.8669)\n",
-      "_confusion_matrix: tensor([[0.8217, 0.1553, 0.0230],\n",
-      "        [0.2599, 0.7043, 0.0358],\n",
-      "        [0.2593, 0.1064, 0.6342]])\n",
+      "accuracy: 0.7201\n",
+      "precision: 0.7367\n",
+      "recall: 0.7201\n",
+      "f1_score: 0.7121\n",
+      "auroc: 0.8669\n",
+      "confusion_matrix:\n",
+      "[[82.171715  15.530303   2.2979798]\n",
+      " [25.991127  70.43249    3.5763793]\n",
+      " [25.93199   10.644446  63.42356  ]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -140,14 +143,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "avg\n",
-      "accuracy: tensor(0.7281)\n",
-      "precision: tensor(0.7273)\n",
-      "recall: tensor(0.7281)\n",
-      "f1_score: tensor(0.7258)\n",
-      "aurroc: tensor(0.8535)\n",
-      "_confusion_matrix: tensor([[0.7275, 0.2049, 0.0676],\n",
-      "        [0.2228, 0.6899, 0.0873],\n",
-      "        [0.1268, 0.1063, 0.7669]])\n",
+      "accuracy: 0.7281\n",
+      "precision: 0.7273\n",
+      "recall: 0.7281\n",
+      "f1_score: 0.7258\n",
+      "auroc: 0.8535\n",
+      "confusion_matrix:\n",
+      "[[72.752525 20.492424  6.75505 ]\n",
+      " [22.27613  68.99085   8.733019]\n",
+      " [12.677007 10.634813 76.68818 ]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -170,14 +174,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "late\n",
-      "accuracy: tensor(0.6842)\n",
-      "precision: tensor(0.7059)\n",
-      "recall: tensor(0.6842)\n",
-      "f1_score: tensor(0.6807)\n",
-      "aurroc: tensor(0.8636)\n",
-      "_confusion_matrix: tensor([[0.8167, 0.1102, 0.0731],\n",
-      "        [0.3802, 0.5543, 0.0654],\n",
-      "        [0.2285, 0.0900, 0.6815]])\n",
+      "accuracy: 0.6842\n",
+      "precision: 0.7059\n",
+      "recall: 0.6842\n",
+      "f1_score: 0.6807\n",
+      "auroc: 0.8636\n",
+      "confusion_matrix:\n",
+      "[[81.666664  11.022727   7.310606 ]\n",
+      " [38.02329   55.43388    6.5428333]\n",
+      " [22.849436   8.997207  68.15336  ]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -200,14 +205,15 @@
       "fold: 5\n",
       "****************************************************************************************************\n",
       "none\n",
-      "accuracy: tensor(0.7468)\n",
-      "precision: tensor(0.7427)\n",
-      "recall: tensor(0.7468)\n",
-      "f1_score: tensor(0.7425)\n",
-      "aurroc: tensor(0.8949)\n",
-      "_confusion_matrix: tensor([[0.7443, 0.1279, 0.1278],\n",
-      "        [0.1568, 0.7742, 0.0690],\n",
-      "        [0.1783, 0.0998, 0.7219]])\n",
+      "accuracy: 0.7468\n",
+      "precision: 0.7427\n",
+      "recall: 0.7468\n",
+      "f1_score: 0.7425\n",
+      "auroc: 0.8949\n",
+      "confusion_matrix:\n",
+      "[[74.431816 12.790404 12.777779]\n",
+      " [15.677849 77.41891   6.903244]\n",
+      " [17.830652  9.979771 72.189575]]\n",
       "####################################################################################################\n"
      ]
     },
@@ -220,6 +226,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary of Metrics:\n",
+      "Model\tFold\taccuracy\tprecision\trecall\tf1_score\tauroc\n",
+      "add\t5\t0.7231791615486145\t0.7650350332260132\t0.7231791615486145\t0.722680926322937\t0.8965103626251221\n",
+      "mul\t5\t0.5813988447189331\t0.6751445531845093\t0.5813988447189331\t0.5748468637466431\t0.7895035147666931\n",
+      "concat\t5\t0.7200925946235657\t0.7367092370986938\t0.7200925946235657\t0.712132453918457\t0.8668764233589172\n",
+      "avg\t5\t0.7281051874160767\t0.7272711992263794\t0.7281051874160767\t0.7258250713348389\t0.8534590601921082\n",
+      "late\t5\t0.6841796636581421\t0.705945611000061\t0.6841796636581421\t0.6807146072387695\t0.8636007905006409\n",
+      "none\t5\t0.7468010187149048\t0.7426559925079346\t0.7468010187149048\t0.742458701133728\t0.894909679889679\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -227,6 +248,7 @@
     "import seaborn as sns\n",
     "import torch \n",
     "from pathlib import Path\n",
+    "import pandas as pd\n",
     "\n",
     "from torchmetrics.classification import (\n",
     "MulticlassAccuracy,\n",
@@ -241,6 +263,8 @@
     "\n",
     "def analysis_with_title_res_path_pair(pair: dict, flag: str = \"with_attn_loss\"):\n",
     "\n",
+    "\tsummary_records = []\n",
+    "\t\n",
     "\tfor title, res_path in pair.items():\n",
     "\t\t\n",
     "\t\tfold = 0\n",
@@ -264,8 +288,13 @@
     "\t\t\n",
     "\t\tprint('*' * 100)\n",
     "\t\tprint(title)\n",
-    "\t\tconfusion_matrix_data = metrics(all_pred, all_label, num_class=3)\n",
+    "\t\tconfusion_matrix_data, metric_dict = metrics(all_pred, all_label, num_class=3)\n",
     "\t\tprint('#' * 100)\n",
+    "\n",
+    "\t\t# save summary records\n",
+    "\t\tsummary_row = {\"Model\": title, \"Fold\": fold}\n",
+    "\t\tsummary_row.update(metric_dict)\n",
+    "\t\tsummary_records.append(summary_row)\n",
     "\n",
     "\t\tplt.rcParams.update({'font.size': 30, 'font.family': 'sans-serif'})\n",
     "\t\taxis_labels = ['ASD', 'DHS', 'LCS_HipOA']\n",
@@ -279,25 +308,42 @@
     "\t\tplt.xlabel('Predicted Label', fontsize=30)\n",
     "\t\tplt.show()\n",
     "    \t\n",
+    "\tdf_summary = pd.DataFrame(summary_records)\n",
+    "\tprint(\"Summary of Metrics:\")\n",
+    "\tprint(df_summary.to_csv(sep=\"\\t\", index=False))\n",
     "\n",
     "def metrics(all_pred: torch.Tensor, all_label: torch.Tensor, num_class: int = 3):\n",
+    "    # define metrics\n",
+    "    _accuracy = MulticlassAccuracy(num_class)\n",
+    "    _precision = MulticlassPrecision(num_class)\n",
+    "    _recall = MulticlassRecall(num_class)\n",
+    "    _f1_score = MulticlassF1Score(num_class)\n",
+    "    _auroc = MulticlassAUROC(num_class)\n",
+    "    _confusion_matrix = MulticlassConfusionMatrix(num_class, normalize=\"true\")\n",
     "\n",
-    "\t# define metrics \n",
-    "\t_accuracy = MulticlassAccuracy(num_class)\n",
-    "\t_precision = MulticlassPrecision(num_class)\n",
-    "\t_recall = MulticlassRecall(num_class)\n",
-    "\t_f1_score = MulticlassF1Score(num_class)\n",
-    "\t_auroc = MulticlassAUROC(num_class)\n",
-    "\t_confusion_matrix = MulticlassConfusionMatrix(num_class, normalize=\"true\")\n",
+    "    accuracy = _accuracy(all_pred, all_label).item()\n",
+    "    precision = _precision(all_pred, all_label).item()\n",
+    "    recall = _recall(all_pred, all_label).item()\n",
+    "    f1 = _f1_score(all_pred, all_label).item()\n",
+    "    auroc = _auroc(all_pred, all_label).item()\n",
+    "    cm = _confusion_matrix(all_pred, all_label).cpu().numpy() * 100\n",
     "\n",
-    "\tprint('accuracy: %s' % _accuracy(all_pred, all_label))\n",
-    "\tprint('precision: %s' % _precision(all_pred, all_label))\n",
-    "\tprint('recall: %s' % _recall(all_pred, all_label))\n",
-    "\tprint('f1_score: %s' % _f1_score(all_pred, all_label))\n",
-    "\tprint('aurroc: %s' % _auroc(all_pred, all_label))\n",
-    "\tprint('_confusion_matrix: %s' % _confusion_matrix(all_pred, all_label))\n",
+    "    print(f\"accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"precision: {precision:.4f}\")\n",
+    "    print(f\"recall: {recall:.4f}\")\n",
+    "    print(f\"f1_score: {f1:.4f}\")\n",
+    "    print(f\"auroc: {auroc:.4f}\")\n",
+    "    print(f\"confusion_matrix:\\n{cm}\")\n",
     "\n",
-    "\treturn _confusion_matrix(all_pred, all_label).cpu().numpy() * 100\n",
+    "    metrics_dict = {\n",
+    "        \"accuracy\": accuracy,\n",
+    "        \"precision\": precision,\n",
+    "        \"recall\": recall,\n",
+    "        \"f1_score\": f1,\n",
+    "        \"auroc\": auroc,\n",
+    "    }\n",
+    "\n",
+    "    return cm, metrics_dict\n",
     "\n",
     "analysis_with_title_res_path_pair(pegasus, flag=\"pegasus\")"
    ]
