Refactor analysis scripts and remove deprecated files
- Renamed variable `pegasus` to `LELAB_new` in `LELAB_new.ipynb` for clarity.
- Updated function call to use the new variable name.
- Deleted `find_5_fold.py` as it was no longer needed.
- Renamed variable `pegasus` to `ws3` in `ws3.ipynb` for consistency.
- Updated function call to use the new variable name.
- Created new `__init__.py` and `find_top_k_fold.py` files for organizing top-k fold analysis.
- Added `path.py` to store model result paths for `ws3`, `pegasus`, and `LELAB_new`.

--- a/analysis/LELAB_new.ipynb
+++ b/analysis/LELAB_new.ipynb
@@ -19,7 +19,7 @@
     "# running on LELAB new \n",
     "# wait for ws3 to be ready\n",
     "\n",
-    "pegasus = {\n",
+    "LELAB_new = {\n",
     "\t\"add\":\n",
     "\t\t\"/workspace/code/logs/3dcnn_attn_map_True_add/2025-06-19/08-58-07/best_preds\",\n",
     "\t\"mul\":\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
     "\n",
     "    return cm, metrics_dict\n",
     "\n",
-    "analysis_with_title_res_path_pair(pegasus, flag=\"pegasus\")"
+    "analysis_with_title_res_path_pair(LELAB_new, flag=\"pegasus\")"
    ]
   },
   {
