--- a/analysis/ws3.ipynb
+++ b/analysis/ws3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "# running on ws3\n",
     "# 2025-06-27 first run\n",
     "\n",
-    "pegasus = {\n",
+    "ws3 = {\n",
     "\t\"add\":\n",
     "\t\t\"/workspace/code/logs/3dcnn_attn_map_True_add/2025-06-21/13-28-55/best_preds\",\n",
     "\t\"mul\":\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
     "\n",
     "    return cm, metrics_dict\n",
     "\n",
-    "analysis_with_title_res_path_pair(pegasus, flag=\"pegasus\")"
+    "analysis_with_title_res_path_pair(ws3, flag=\"pegasus\")"
    ]
   }
  ],
